--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">ET_tutorial</string>
+    <string name="app_name">How do I live tutorial</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="start">Start!</string>
+    <string name="description_main">"Let's plan your life!"</string>
 
 </resources>
