--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,9 +6,15 @@
     <string name="description_main">Let\'s plan your life!</string>
     <string name="start">Start!</string>
     <string name="title_activity_introduction">ET Introduction</string>
-    <string name="description_introduction1">發明創造其實是一個不斷進化的過程，而不是令人難以把握的飛躍。</string>
-	<string name="description_introduction2">等值變換法是通過相互模擬、借鑒、產生聯想來改變原來的對象而進行創造的方法。</string>
-	<string name="description_introduction3">等值變換法同類比發明法一樣，都是從已有的事物中，通過類比創造發明出新的產品。</string>
-	<string name="next">Next</string>
-	
+    <string name="description1_introduction">發明創造其實是一個不斷進化的過程，而不是令人難以把握的飛躍。</string>
+    <string name="description2_introduction">等值變換法是通過相互模擬、借鑒、產生聯想來改變原來的對象而進行創造的方法。</string>
+    <string name="description3_introduction">等值變換法同類比發明法一樣，都是從已有的事物中，通過類比創造發明出新的產品。</string>
+    <string name="next">Next</string>
+    <string name="title_activity_step1">Step1. Adjust your life parameter</string>
+    <string name="description1_step1">To plan your life, first you have to adjust your current states. These states include:</string>
+    <string name="description2_step1">1. Life represents your health.\n2. Money represents your wealth.\n3. Age represents how many years you can live</string>
+    <string name="title_activity_step2">Step2. Choose your next step</string>
+    <string name="description1_step2">Now, start planning your life!\nYou have just graduated from university, and it is time to make your decision which you are going to do next.\nYou have 4 choices:</string>
+    <string name="description2_step2">1. Master\'s degree\n2. Find a job\n3. Do nothing\n4. Work for military</string>
+
 </resources>
