--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">How do I live tutorial2</string>
+    <string name="app_name">How do I live 教學</string>
     <string name="action_settings">Settings</string>
     <string name="language_en">English</string>
-    <string name="language_zh_TW">繁體中文</string>
-    <string name="language_zh_CN">简体中文</string>
+    <string name="language_ch">中文</string>
     <string name="description_main">Let\'s plan your life!</string>
-    <string name="start">Start!</string>
+    <string name="start">開始!</string>
     <string name="title_activity_introduction">ET Introduction</string>
     <string name="description1_introduction">發明創造其實是一個不斷進化的過程，而不是令人難以把握的飛躍。</string>
     <string name="description2_introduction">等值變換法是通過相互模擬、借鑒、產生聯想來改變原來的對象而進行創造的方法。</string>
