user-defined fragment

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="sasb">Addition and subtraction</string>
     <string name="vi">Vi</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="title_activity_a0bt">A0bt</string>
 
 </resources>
